--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.4",
     "@tabler/icons-react": "^3.24.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,9 +20,9 @@
     "next": "15.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "tailwind-merge": "^2.5.5",
     "react-slick": "^0.30.2",
     "swiper": "^11.1.15",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
